--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -2,6 +2,6 @@
     color: blue;
 }
 #parrafo_yellow{
-    color: rgba(255, 255, 0, 0.678);
     text-align: center;
+    background-color: yellow;
 }
